--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.12",
+    "@mui/icons-material": "^5.14.16",
+    "@mui/material": "^5.14.16",
+    "@mui/styles": "^5.14.16",
     "babel-plugin-styled-components": "^1.13.3",
     "gatsby": "^4.2.0",
     "gatsby-plugin-gatsby-cloud": "^4.2.0",
@@ -20,6 +22,7 @@
     "gatsby-plugin-styled-components": "^5.2.0",
     "gatsby-source-filesystem": "^4.2.0",
     "gatsby-source-shopify": "^6.2.0",
+    "gatsby-theme-material-ui": "^5.3.0",
     "gatsby-transformer-sharp": "^4.2.0",
     "isomorphic-fetch": "^3.0.0",
     "prop-types": "^15.7.2",
