--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "gatsby-starter-default",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "The Art in Lounge Fashion Website",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Simeon Arabov <https://github.com/arabovs>",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
     "@mui/styles": "^5.14.16",
-    "babel-plugin-styled-components": "^1.13.3",
     "gatsby": "^4.2.0",
     "gatsby-plugin-gatsby-cloud": "^4.2.0",
     "gatsby-plugin-image": "^2.2.0",
@@ -19,7 +18,6 @@
     "gatsby-plugin-offline": "^5.2.0",
     "gatsby-plugin-react-helmet": "^5.2.0",
     "gatsby-plugin-sharp": "^4.2.0",
-    "gatsby-plugin-styled-components": "^5.2.0",
     "gatsby-source-filesystem": "^4.2.0",
     "gatsby-source-shopify": "^6.2.0",
     "gatsby-theme-material-ui": "^5.3.0",
@@ -30,8 +28,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "sharp": "^0.32.6",
-    "shopify-buy": "^2.13.0",
-    "styled-components": "^5.3.3"
+    "shopify-buy": "^2.13.0"
   },
   "devDependencies": {
     "prettier": "^2.4.1"
