--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-theme-material-ui": "^5.3.0",
     "gatsby-transformer-sharp": "^4.2.0",
     "isomorphic-fetch": "^3.0.0",
+    "js-cookie": "^3.0.5",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
